decaf_PA1A/src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  13  ExtendsClause : EXTENDS IDENTIFIER
  14                |

  15  FieldList : FieldList VariableDef
  16            | FieldList FunctionDef
  17            |

  18  Formals : VariableList
  19          |

  20  VariableList : VariableList ',' Variable
  21               | Variable

  22  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  23              | Type IDENTIFIER '(' Formals ')' StmtBlock

  24  StmtBlock : '{' StmtList '}'

  25  StmtList : StmtList Stmt
  26           |

  27  Stmt : VariableDef
  28       | SimpleStmt ';'
  29       | SCOPY '(' IDENTIFIER ',' Expr ')'
  30       | IfStmt
  31       | WhileStmt
  32       | ForStmt
  33       | ReturnStmt ';'
  34       | PrintStmt ';'
  35       | BreakStmt ';'
  36       | StmtBlock

  37  SimpleStmt : LValue '=' Expr
  38             | Call
  39             |

  40  Receiver : Expr '.'
  41           |

  42  LValue : Receiver IDENTIFIER
  43         | Expr '[' Expr ']'

  44  Call : Receiver IDENTIFIER '(' Actuals ')'

  45  Expr : LValue
  46       | Call
  47       | Constant
  48       | Expr '+' Expr
  49       | Expr '-' Expr
  50       | Expr '*' Expr
  51       | Expr '/' Expr
  52       | Expr '%' Expr
  53       | Expr EQUAL Expr
  54       | Expr NOT_EQUAL Expr
  55       | Expr '<' Expr
  56       | Expr '>' Expr
  57       | Expr LESS_EQUAL Expr
  58       | Expr GREATER_EQUAL Expr
  59       | Expr AND Expr
  60       | Expr OR Expr
  61       | '(' Expr ')'
  62       | '-' Expr
  63       | '!' Expr
  64       | READ_INTEGER '(' ')'
  65       | READ_LINE '(' ')'
  66       | THIS
  67       | NEW IDENTIFIER '(' ')'
  68       | NEW Type '[' Expr ']'
  69       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  70       | '(' CLASS IDENTIFIER ')' Expr

  71  Constant : LITERAL
  72           | NULL

  73  Actuals : ExprList
  74          |

  75  ExprList : ExprList ',' Expr
  76           | Expr

  77  WhileStmt : WHILE '(' Expr ')' Stmt

  78  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  79  BreakStmt : BREAK

  80  IfStmt : IF '(' Expr ')' Stmt ElseClause

  81  ElseClause : ELSE Stmt
  82             |

  83  ReturnStmt : RETURN Expr
  84             | RETURN

  85  PrintStmt : PRINT '(' ExprList ')'

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	.  error

	Program  goto 2
	ClassList  goto 3
	ClassDef  goto 4


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 5
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	$end  reduce 1

	ClassDef  goto 6


state 4
	ClassList : ClassDef .  (3)

	.  reduce 3


state 5
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (14)

	EXTENDS  shift 7
	'{'  reduce 14

	ExtendsClause  goto 8


state 6
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 7
	ExtendsClause : EXTENDS . IDENTIFIER  (13)

	IDENTIFIER  shift 9
	.  error


state 8
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 10
	.  error


state 9
	ExtendsClause : EXTENDS IDENTIFIER .  (13)

	.  reduce 13


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (17)

	.  reduce 17

	FieldList  goto 11


state 11
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (15)
	FieldList : FieldList . FunctionDef  (16)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	STATIC  shift 17
	'}'  shift 18
	.  error

	VariableDef  goto 19
	Variable  goto 20
	Type  goto 21
	FunctionDef  goto 22


state 12
	Type : VOID .  (7)

	.  reduce 7


state 13
	Type : BOOL .  (8)

	.  reduce 8


state 14
	Type : INT .  (6)

	.  reduce 6


state 15
	Type : STRING .  (9)

	.  reduce 9


state 16
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 23
	.  error


state 17
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (22)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	.  error

	Type  goto 24


state 18
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 19
	FieldList : FieldList VariableDef .  (15)

	.  reduce 15


state 20
	VariableDef : Variable . ';'  (4)

	';'  shift 25
	.  error


state 21
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 26
	'['  shift 27
	.  error


state 22
	FieldList : FieldList FunctionDef .  (16)

	.  reduce 16


state 23
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 24
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (22)

	IDENTIFIER  shift 28
	'['  shift 27
	.  error


state 25
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 26
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 29
	';'  reduce 5


state 27
	Type : Type '[' . ']'  (11)

	']'  shift 30
	.  error


state 28
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (22)

	'('  shift 31
	.  error


state 29
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (19)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	')'  reduce 19

	Variable  goto 32
	Type  goto 33
	Formals  goto 34
	VariableList  goto 35


state 30
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 31
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (22)
	Formals : .  (19)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	')'  reduce 19

	Variable  goto 32
	Type  goto 33
	Formals  goto 36
	VariableList  goto 35


state 32
	VariableList : Variable .  (21)

	.  reduce 21


state 33
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 37
	'['  shift 27
	.  error


state 34
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 38
	.  error


state 35
	Formals : VariableList .  (18)
	VariableList : VariableList . ',' Variable  (20)

	','  shift 39
	')'  reduce 18


state 36
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (22)

	')'  shift 40
	.  error


state 37
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 38
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 41
	.  error

	StmtBlock  goto 42


state 39
	VariableList : VariableList ',' . Variable  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	.  error

	Variable  goto 43
	Type  goto 33


state 40
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (22)

	'{'  shift 41
	.  error

	StmtBlock  goto 44


state 41
	StmtBlock : '{' . StmtList '}'  (24)
	StmtList : .  (26)

	.  reduce 26

	StmtList  goto 45


state 42
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 43
	VariableList : VariableList ',' Variable .  (20)

	.  reduce 20


state 44
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (22)

	.  reduce 22


state 45
	StmtBlock : '{' StmtList . '}'  (24)
	StmtList : StmtList . Stmt  (25)
	SimpleStmt : .  (39)
	Receiver : .  (41)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	NULL  shift 46
	THIS  shift 47
	WHILE  shift 48
	FOR  shift 49
	IF  shift 50
	RETURN  shift 51
	BREAK  shift 52
	NEW  shift 53
	PRINT  shift 54
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	SCOPY  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	'{'  shift 41
	'}'  shift 63
	IDENTIFIER  reduce 41
	';'  reduce 39

	VariableDef  goto 64
	Variable  goto 20
	Type  goto 33
	StmtBlock  goto 65
	Stmt  goto 66
	SimpleStmt  goto 67
	Expr  goto 68
	IfStmt  goto 69
	WhileStmt  goto 70
	ForStmt  goto 71
	ReturnStmt  goto 72
	PrintStmt  goto 73
	BreakStmt  goto 74
	LValue  goto 75
	Call  goto 76
	Receiver  goto 77
	Constant  goto 78


state 46
	Constant : NULL .  (72)

	.  reduce 72


state 47
	Expr : THIS .  (66)

	.  reduce 66


state 48
	WhileStmt : WHILE . '(' Expr ')' Stmt  (77)

	'('  shift 79
	.  error


state 49
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (78)

	'('  shift 80
	.  error


state 50
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (80)

	'('  shift 81
	.  error


state 51
	ReturnStmt : RETURN . Expr  (83)
	ReturnStmt : RETURN .  (84)
	Receiver : .  (41)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	IDENTIFIER  reduce 41
	';'  reduce 84

	Expr  goto 82
	LValue  goto 83
	Call  goto 84
	Receiver  goto 77
	Constant  goto 78


state 52
	BreakStmt : BREAK .  (79)

	.  reduce 79


state 53
	Expr : NEW . IDENTIFIER '(' ')'  (67)
	Expr : NEW . Type '[' Expr ']'  (68)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	IDENTIFIER  shift 85
	.  error

	Type  goto 86


state 54
	PrintStmt : PRINT . '(' ExprList ')'  (85)

	'('  shift 87
	.  error


state 55
	Expr : READ_INTEGER . '(' ')'  (64)

	'('  shift 88
	.  error


state 56
	Expr : READ_LINE . '(' ')'  (65)

	'('  shift 89
	.  error


state 57
	Constant : LITERAL .  (71)

	.  reduce 71


state 58
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (69)

	'('  shift 90
	.  error


state 59
	Stmt : SCOPY . '(' IDENTIFIER ',' Expr ')'  (29)

	'('  shift 91
	.  error


state 60
	Expr : '-' . Expr  (62)
	Receiver : .  (41)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	IDENTIFIER  reduce 41

	Expr  goto 92
	LValue  goto 83
	Call  goto 84
	Receiver  goto 77
	Constant  goto 78


state 61
	Expr : '!' . Expr  (63)
	Receiver : .  (41)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	IDENTIFIER  reduce 41

	Expr  goto 93
	LValue  goto 83
	Call  goto 84
	Receiver  goto 77
	Constant  goto 78


state 62
	Expr : '(' . Expr ')'  (61)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (70)
	Receiver : .  (41)

	CLASS  shift 94
	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	IDENTIFIER  reduce 41

	Expr  goto 95
	LValue  goto 83
	Call  goto 84
	Receiver  goto 77
	Constant  goto 78


state 63
	StmtBlock : '{' StmtList '}' .  (24)

	.  reduce 24


state 64
	Stmt : VariableDef .  (27)

	.  reduce 27


state 65
	Stmt : StmtBlock .  (36)

	.  reduce 36


state 66
	StmtList : StmtList Stmt .  (25)

	.  reduce 25


state 67
	Stmt : SimpleStmt . ';'  (28)

	';'  shift 96
	.  error


state 68
	Receiver : Expr . '.'  (40)
	LValue : Expr . '[' Expr ']'  (43)
	Expr : Expr . '+' Expr  (48)
	Expr : Expr . '-' Expr  (49)
	Expr : Expr . '*' Expr  (50)
	Expr : Expr . '/' Expr  (51)
	Expr : Expr . '%' Expr  (52)
	Expr : Expr . EQUAL Expr  (53)
	Expr : Expr . NOT_EQUAL Expr  (54)
	Expr : Expr . '<' Expr  (55)
	Expr : Expr . '>' Expr  (56)
	Expr : Expr . LESS_EQUAL Expr  (57)
	Expr : Expr . GREATER_EQUAL Expr  (58)
	Expr : Expr . AND Expr  (59)
	Expr : Expr . OR Expr  (60)

	AND  shift 97
	OR  shift 98
	LESS_EQUAL  shift 99
	GREATER_EQUAL  shift 100
	EQUAL  shift 101
	NOT_EQUAL  shift 102
	'+'  shift 103
	'-'  shift 104
	'*'  shift 105
	'/'  shift 106
	'%'  shift 107
	'>'  shift 108
	'<'  shift 109
	'.'  shift 110
	'['  shift 111
	.  error


state 69
	Stmt : IfStmt .  (30)

	.  reduce 30


state 70
	Stmt : WhileStmt .  (31)

	.  reduce 31


state 71
	Stmt : ForStmt .  (32)

	.  reduce 32


state 72
	Stmt : ReturnStmt . ';'  (33)

	';'  shift 112
	.  error


state 73
	Stmt : PrintStmt . ';'  (34)

	';'  shift 113
	.  error


state 74
	Stmt : BreakStmt . ';'  (35)

	';'  shift 114
	.  error


state 75
	SimpleStmt : LValue . '=' Expr  (37)
	Expr : LValue .  (45)
